--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,10 @@
 <h2> Latest posts: </h2>
+<br />
+<% @results.each do |post| %>
+  <p>
+    <%= post['Content'] %>
+    <br />
+    Added at <%= post['Created_Date'] %>
+  </p>
+  <hr />
+<%end%>
