--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <br />
     Added at <%= post['Created_Date'] %>
     <br />
-    <a href="/post/<%= post['Id'] %>">Comments</a>
+    <a href="/details/<%= post['Id'] %>">Comments</a>
   </p>
   <hr />
 <%end%>
