--- a/views/details.erb
+++ b/views/details.erb
@@ -6,3 +6,12 @@
     <br />
     Added at <%= @row['Created_Date'] %>
   </p>
+  <br />
+<h4>Comments:</h4> 
+<p> 
+  <form action="/details/<%= @row['Id'] %>" method="POST" role="form">
+    <textarea name="content" class="form-control" rows="6" placeholder="Type comment text here" style="width:400px;"></textarea>
+    <br />
+    <button type="submit" class="btn btn-info">Add comment</button>
+  </form>
+</p>
